Name: dhall-docs
Version: 0.0.1
Cabal-Version: >=1.10
Build-Type: Simple
Tested-With: GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.1
License: BSD3
License-File: LICENSE
Copyright: 2020 Germán Robayo
Author: Germán Robayo
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Generate HTML docs from a dhall package
Description:
    Use this package if you want to create HTML documentation from your dhall
    packages:
    .
    * See the "Dhall.Docs" module if you want to use this package as a library
    .
    * Use the @dhall-docs@ program from this package if you want an executable
    .
    The "Dhall.Docs" module also contains instructions for how to use this package
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
Data-Files:
    src/Dhall/data/*.css,
    src/Dhall/data/*.ttf

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-json

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4        && < 5   ,
        bytestring                          < 0.11,
        containers                                ,
        dhall                >= 1.32.0   && < 1.33,
        foldl                               < 1.5 ,
        lucid                == 2.9.*             ,
        text                 >= 0.11.1.0 && < 1.3 ,
        turtle                              < 1.6 ,
        optparse-applicative >= 0.14.0.0 && < 0.16
    Exposed-Modules:
        Dhall.Docs
        Dhall.Docs.Html
    Other-Modules:
        Paths_dhall_docs
    GHC-Options: -Wall
    Default-Language: Haskell2010

Executable dhall-docs
    Hs-Source-Dirs: dhall-docs
    Main-Is: Main.hs
    Build-Depends:
        base      ,
        dhall     ,
        dhall-docs
    Other-Modules:
        Paths_dhall_docs
    GHC-Options: -Wall
    Default-Language: Haskell2010
