Name: dhall-docs
Version: 1.0.9
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2020 Germán Robayo
Author: Germán Robayo
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Generate HTML docs from a dhall package
Description:
    Use this package if you want to create HTML documentation from your dhall
    packages:
    .
    * See the "Dhall.Docs" module if you want to use this package as a library
    .
    * Use the @dhall-docs@ program from this package if you want an executable
    .
    The "Dhall.Docs" module also contains instructions for how to use this package
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
    README.md
    tasty/data/package/*.dhall
    tasty/data/package/a/*.dhall
    tasty/data/package/a/b/*.dhall
    tasty/data/package/a/b/c/*.dhall
    tasty/data/package/deep/nested/folder/*.dhall
    tasty/data/golden/*.dhall.html
    tasty/data/golden/a/*.dhall.html
    tasty/data/golden/a/b/*.dhall.html
    tasty/data/golden/a/b/c/*.dhall.html
    tasty/data/golden/deep/nested/folder/*.dhall.html
    tasty/data/golden/*.html
    tasty/data/golden/a/*.html
    tasty/data/golden/a/b/*.html
    tasty/data/golden/a/b/c/*.html
    tasty/data/golden/deep/nested/folder/*.html
    tasty/data/golden/deep/nested/*.html
    tasty/data/comments/empty/*.txt
    tasty/data/comments/invalid/*.txt
    tasty/data/comments/valid/*.txt
Data-Files:
    assets/*.css
    assets/*.js
    assets/*.svg
    man/dhall-docs.1
Data-Dir:
    src/Dhall/data

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-docs


Flag ghci-data-files
  description: To enable use of data-files while running `stack ghci`
  default: False

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.11.0.0  && < 5   ,
        base16-bytestring    >= 1.0.0.0            ,
        bytestring                           < 0.12,
        containers                                 ,
        cryptohash-sha256                          ,
        directory            >= 1.3.0.0   && < 1.4 ,
        dhall                >= 1.38.0    && < 1.42,
        file-embed           >= 0.0.10.0           ,
        filepath             >= 1.4       && < 1.5 ,
        lens-family-core     >= 1.0.0     && < 2.2 ,
        lucid                >= 2.9.12    && < 2.12,
        mmark                >= 0.0.7.0   && < 0.8 ,
        -- megaparsec follows SemVer: https://github.com/mrkkrp/megaparsec/issues/469#issuecomment-927918469
        megaparsec           >= 7         && < 10  ,
        path                 >= 0.7.0     && < 0.10,
        -- path-io follows SemVer: https://github.com/mrkkrp/path-io/issues/68
        path-io              >= 1.6.0     && < 2 ,
        prettyprinter        >= 1.7.0     && < 1.8 ,
        text                 >= 0.11.1.0  && < 2.1 ,
        transformers         >= 0.2.0.0  && < 0.6 ,
        mtl                  >= 2.2.1     && < 2.3 ,
        optparse-applicative >= 0.14.0.0  && < 0.18
    Exposed-Modules:
        Dhall.Docs
        Dhall.Docs.Core
    Other-Modules:
        Dhall.Docs.CodeRenderer
        Dhall.Docs.Comment
        Dhall.Docs.Embedded
        Dhall.Docs.Html
        Dhall.Docs.Markdown
        Dhall.Docs.Store
        Dhall.Docs.Util
        Paths_dhall_docs
    GHC-Options: -Wall
    Default-Language: Haskell2010
    if flag(ghci-data-files)
        Other-Modules: Paths_dhall_docs
    else
        Cpp-Options: "-DEMBED"

Executable dhall-docs
    Hs-Source-Dirs: dhall-docs
    Main-Is: Main.hs
    Build-Depends:
        base      ,
        dhall     ,
        dhall-docs
    Other-Modules:
        Paths_dhall_docs
    GHC-Options: -Wall
    Default-Language: Haskell2010

Test-Suite doctest
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: doctest
    Main-Is: Main.hs
    GHC-Options: -Wall
    Build-Depends:
        base                           ,
        directory,
        filepath                 < 1.5 ,
        doctest    >= 0.7.0
    Other-Extensions: OverloadedStrings RecordWildCards
    Default-Language: Haskell2010

Test-Suite tasty
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tasty
    Main-Is: Main.hs
    Build-Depends:
        base                              ,
        bytestring                        ,
        containers                        ,
        dhall                             ,
        dhall-docs                        ,
        foldl        < 1.5                ,

        -- lucid preserves input attribute order since v2.11.0
        lucid        >= 2.11.0            ,

        path                              ,
        path-io                           ,
        pretty       >= 1.1.1.1           ,
        tasty        < 1.5                ,
        tasty-silver < 3.4                ,
        tasty-hunit  >= 0.10     && < 0.11,
        turtle       < 1.6                ,
        text
    GHC-Options: -Wall
    Default-Language: Haskell2010
