Name: dhall-json-yaml-common
Version: 0.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 7.10.3, GHC == 8.4.3, GHC == 8.6.1
License: BSD3
License-File: LICENSE
Copyright: 2019 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Shared code for the dhall-json and dhall-yaml packages
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
    README.md

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-json-yaml-common

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                      >= 4.8.0.0  && < 5   ,
        --aeson                     >= 1.0.0.0  && < 1.5 ,
        --aeson-pretty                             < 0.9 ,
        --bytestring                               < 0.11,
        --containers                                     ,
        --dhall                     >= 1.27.0   && < 1.28,
        --exceptions                >= 0.8.3    && < 0.11,
        --filepath                                 < 1.5 ,
        optparse-applicative      >= 0.14.0.0 && < 0.16
        --prettyprinter             >= 1.2.0.1  && < 1.4 ,
        --scientific                >= 0.3.0.0  && < 0.4 ,
        --text                      >= 0.11.1.0 && < 1.3 ,
        --unordered-containers                     < 0.3 ,
        --vector
    Exposed-Modules:
        Dhall.JSON.YAML.Common
    GHC-Options: -Wall
