Name: dhall-json
Version: 1.7.10
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Convert between Dhall and JSON or YAML
Description:
    Use this package if you want to convert between Dhall expressions and JSON
    or YAML. You can use this package as a library or an executable:
    .
    * See the "Dhall.JSON" or "Dhall.JSONToDhall" modules if you want to use
      this package as a library
    .
    * Use the @dhall-to-json@, @dhall-to-yaml@, or @json-to-dhall@ programs from
      this package if you want an executable
    .
    The "Dhall.JSON" and "Dhall.JSONToDhall" modules also contains instructions
    for how to use this package
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
    tasty/data/*.dhall
    tasty/data/*.json
    tasty/data/error/*.golden
    tasty/data/error/*.json
    tasty/data/error/*.dhall

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-json

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                      >= 4.11.0.0  && < 5   ,
        aeson                     >= 1.4.6.0   && < 2.1 ,
        aeson-pretty              >= 0.8.0     && < 0.9 ,
        aeson-yaml                >= 1.1.0     && < 1.2 ,
        bytestring                                < 0.12,
        containers                >= 0.5.9     && < 0.7 ,
        dhall                     >= 1.41.0    && < 1.42,
        exceptions                >= 0.8.3     && < 0.11,
        filepath                                  < 1.5 ,
        lens-family-core          >= 1.0.0     && < 2.2 ,
        optparse-applicative      >= 0.14.0.0  && < 0.18,
        prettyprinter             >= 1.7.0     && < 1.8 ,
        scientific                >= 0.3.0.0   && < 0.4 ,
        text                      >= 0.11.1.0  && < 2.1 ,
        unordered-containers                      < 0.3 ,
        vector
    Exposed-Modules:
        Dhall.JSON
        Dhall.JSONToDhall
        Dhall.JSON.Yaml
        Dhall.DhallToYaml.Main
    Other-Modules:
        Dhall.JSON.Compat
        Dhall.JSON.Util
    GHC-Options: -Wall
    Default-Language: Haskell2010

Executable dhall-to-json
    Hs-Source-Dirs: dhall-to-json
    Main-Is: Main.hs
    Build-Depends:
        base                                   ,
        aeson                                  ,
        aeson-pretty         >= 0.8.5 && < 0.9 ,
        bytestring                             ,
        dhall                                  ,
        dhall-json                             ,
        optparse-applicative                   ,
        text
    Other-Modules:
        Paths_dhall_json
    GHC-Options: -Wall
    Default-Language: Haskell2010

Executable dhall-to-yaml
    Hs-Source-Dirs: dhall-to-yaml
    Main-Is: Main.hs
    Build-Depends:
        base      ,
        dhall-json
    Other-Modules:
        Paths_dhall_json
    GHC-Options: -Wall
    Default-Language: Haskell2010

Executable json-to-dhall
    Hs-Source-Dirs: json-to-dhall
    Main-Is: Main.hs
    Build-Depends:
        base                                             ,
        aeson                                            ,
        ansi-terminal               >= 0.6.3.1  && < 0.12,
        bytestring                                       ,
        dhall                                            ,
        dhall-json                                       ,
        exceptions                  >= 0.8.3    && < 0.11,
        optparse-applicative                             ,
        prettyprinter                                    ,
        prettyprinter-ansi-terminal >= 1.1.1    && < 1.2 ,
        text
    Other-Modules:
        Paths_dhall_json
    GHC-Options: -Wall
    Default-Language: Haskell2010

Test-Suite tasty
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tasty
    Main-Is: Main.hs
    Build-Depends:
        base               ,
        aeson              ,
        bytestring         ,
        dhall              ,
        dhall-json         ,
        tasty        <  1.5,
        text               ,
        tasty-hunit  >= 0.2,
        tasty-silver >= 3.0
    GHC-Options: -Wall
    Default-Language: Haskell2010
