cabal-version: 1.12
name:           dhall-lsp-server
version:        1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/dhall-lsp-server#readme>
homepage:       https://github.com/dhall-lang/dhall-haskell/dhall-lsp-server#readme
bug-reports:    https://github.com/dhall-lang/dhall-haskell/issues
author:         panaeon
maintainer:     Gabriel Gonzalez
copyright:      2019 panaeon
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/dhall-lang/dhall-haskell

library
  exposed-modules:
      Dhall.LSP.Backend.Dhall
      Dhall.LSP.Backend.Diagnostics
      Dhall.LSP.Backend.Freezing
      Dhall.LSP.Backend.Formatting
      Dhall.LSP.Backend.Linting
      Dhall.LSP.Backend.Parsing
      Dhall.LSP.Backend.ToJSON
      Dhall.LSP.Backend.Typing
      Dhall.LSP.Handlers
      Dhall.LSP.Server
      Dhall.LSP.State
  other-modules:
      Paths_dhall_lsp_server
      Dhall.LSP.Util
  hs-source-dirs:
      src
  default-extensions: LambdaCase OverloadedStrings FlexibleInstances TypeApplications RecordWildCards ScopedTypeVariables
  build-depends:
      aeson                >= 1.3.1.1  && < 1.5
    , aeson-pretty         >= 0.8.7    && < 0.9
    , base                 >= 4.7      && < 5
    , bytestring           >= 0.10.8.2 && < 0.11
    , containers           >= 0.5.11.0 && < 0.7
    , cryptonite           >= 0.25     && < 0.27
    , data-default         >= 0.7.1.1  && < 0.8
    , dhall                >= 1.25.0   && < 1.26
    , dhall-json           >= 1.4      && < 1.5
    , dotgen               >= 0.4.2    && < 0.5
    , filepath             >= 1.4.2    && < 1.5
    , haskell-lsp          >= 0.8.1.0  && < 0.9
    , hslogger             >= 1.2.10   && < 1.4
    , lens                 >= 4.16.1   && < 4.18
    , lens-family-core     >= 1.2.3    && < 2.1
    , megaparsec           >= 7.0.2    && < 7.1
    , mtl                  >= 2.2.2    && < 2.3
    , network-uri          >= 2.6.1.0  && < 2.7
    , optparse-applicative >= 0.14.3.0 && < 0.16
    , prettyprinter        >= 1.2.1    && < 1.4
    , sorted-list          >= 0.2.1.0  && < 0.3
    , stm                  >= 2.4.5.0  && < 2.6
    , text                 >= 1.2.3.0  && < 1.3
    , transformers         >= 0.5.5.0  && < 0.6
    , unordered-containers >= 0.2.9.0  && < 0.3
    , uri-encode           >= 1.5.0.5  && < 1.6
    , yi-rope              >= 0.11     && < 0.12
  default-language: Haskell2010
  GHC-Options: -Wall -fwarn-incomplete-uni-patterns
  if impl(eta)
     buildable: False


executable dhall-lsp-server
  main-is: Main.hs
  other-modules:
      Paths_dhall_lsp_server
  hs-source-dirs:
      app
  default-extensions: LambdaCase OverloadedStrings FlexibleInstances TypeApplications RecordWildCards ScopedTypeVariables
  ghc-options: -rtsopts
  build-depends:
      aeson
    , base >=4.7 && <5
    , containers
    , data-default
    , dhall
    , dhall-lsp-server
    , filepath
    , haskell-lsp
    , hslogger
    , lens
    , lens-family-core
    , megaparsec
    , mtl
    , optparse-applicative
    , prettyprinter
    , sorted-list
    , stm
    , text
    , transformers
    , unordered-containers
    , yi-rope
  default-language: Haskell2010
  GHC-Options: -Wall -fwarn-incomplete-uni-patterns
  if impl(eta)
     buildable: False

Test-Suite doctest
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: doctest
    Main-Is: Main.hs
    GHC-Options: -Wall
    Build-Depends:
        base                           ,
        directory  >= 1.3.1.5 && < 1.4 ,
        filepath                 < 1.5 ,
        doctest    >= 0.7.0   && < 0.17
    Other-Extensions: OverloadedStrings RecordWildCards
    Default-Language: Haskell2010
    -- `doctest` doesn't work with `MIN_VERSION` macros before GHC 8
    --
    --  See: https://ghc.haskell.org/trac/ghc/ticket/10970
    if impl(ghc < 8.0)
      Buildable: False
