Name: dhall-nix
Version: 1.0.9
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 8.0.1
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Dhall-Nix-Library/issues
Synopsis: Dhall to Nix compiler
Description:
  Use this package if you want to compile Dhall expressions to the Nix language.
  You can use this package as a library or an executable:
  .
  * See the "Dhall.Nix" module if you want to use this package as a library
  .
  * Use the @dhall-to-nix@ program from this package if you want an executable
  .
  The "Dhall.Nix" module also contains instructions for how to use this package
Category: Compiler
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Dhall-Nix-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base               >= 4.8.0.0  && < 5   ,
        containers                        < 0.6 ,
        data-fix                          < 0.3 ,
        dhall              >= 1.5.0    && < 1.9 ,
        hnix               >= 0.3.4    && < 0.4 ,
        neat-interpolation                < 0.4 ,
        text               >= 0.8.0.0  && < 1.3 ,
        text-format                       < 0.4 ,
        vector             >= 0.3      && < 0.13
    Exposed-Modules:
        Dhall.Nix
    GHC-Options: -Wall

Executable dhall-to-nix
    Hs-Source-Dirs: exec
    Main-Is: Main.hs
    Build-Depends:
        base                                ,
        dhall                               ,
        dhall-nix                           ,
        hnix                                ,
        optparse-generic >= 1.1.1   && < 1.3,
        text                                ,
        trifecta         >= 1.0     && < 1.8
    GHC-Options: -Wall
